mobile first and responsive

--- a/index.html
+++ b/index.html
@@ -32,21 +32,51 @@
         your experience.
       </p>
     <![endif]-->
-
+  <section class="flex-container">
+    <header>
+        <h1>Hi, I'm Tricia!</h1>
+    </header>
+    <main>
+        <p>
+          I am a <span>Responsive Designer & Developer</span> who aims to
+          deliver a beautiful site with an amazing user experience. When I'm not
+          working, I can be found reading or making memories with my husband and
+          two kids.
+        </p>
+    </main>
     <section class="wrapper">
-      <div class="div-1">
-        I am from the suburbs of Chicago, but have a deep love for the
-        west-coast.
+      <div id="div-1" class= "flex-items">
+        <p>I am from the suburbs of Chicago, but have a deep love for the
+        west-coast. I can't wait until travel resumes and I can explore more of
+        the world.</p>
       </div>
-      <div class="div-2">
-        I love to read and spent several years as a reading teacher and tutor.
+      <div id="div-2" class= "flex-items">
+        <p>I love to read and spent several years as a reading teacher and tutor.
         My to-read bookstack is always growing and I try to make time to tackle
-        it everyday.
+        it everyday.</p>
       </div>
-      <div class="div-3">
-        I have 2 kids, aged 5 & 8. They keep me on my toes, but have taught me
-        more about myself than they will ever know.
+      <div id="div-3" class= "flex-items">
+        <p>I have 2 kids, aged 5 & 8. They keep me on my toes, but have taught me
+        more about myself than they will ever know.</p>
       </div>
+    </section>
+    <section class="social">
+      <div class="social-1">
+        <a href="https://twitter.com/Tae52705" target="_BLANK">
+          <img src="img/icon-twitter.png" alt="Twitter icon" />
+        </a>
+      </div>
+      <div class="social-2">
+        <a href="https://instagram.com" target="_BLANK">
+          <img src="img/icon-instagram.png" alt="Instagram icon" />
+        </a>
+      </div>
+      <div class="social-3"></div>
+        <a href="https://www.linkedin.com/" target="_BLANK">
+          <img src="img/icon-linkedin.png" alt="Linkedin icon" />
+        </a>
+      </div>
+    </section>
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
